complete auth register and login flow

--- a/package.json
+++ b/package.json
@@ -4,23 +4,34 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.4.1",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@vercel/postgres": "^0.9.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.32.0",
     "framer-motion": "^11.3.2",
+    "mysql2": "^3.10.3",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "resend": "^3.5.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
